Bug 1872422 - Make `HTMLEditUtils::IsNeverElementContentsEditableByUser` return `false` for `<picture>` r=m_kato

Invalid children of `<picture>` like text may appear as usual.  Therefore,
they should be editable.

Note that this patch does not fix the root cause of the assertion because
if selection range may cross a remaining element boundary listed in the
method, but I couldn't find a way to fix this with a reasonable size patch.

Differential Revision: https://phabricator.services.mozilla.com/D197988